cargo-features = ["edition2024"]

[package]
name = "cs2-annotations"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
fern = "0.7.0"
humantime = "2.1.0"
kv3 = { version = "0.1.1", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.215", features = ["serde_derive"] }
